--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.6.2",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
